# health-signal

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PRODUCT.md  README.md  docker-compose.yml
ai-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml
ai-agent/agents/: agent_state.py  conversation_memory.py  doctor_report.py  graph_factory.py  lab_analysis.py  pattern_detection.py  supervisor.py  timeline.py
ai-agent/api/: deps.py
ai-agent/core/: config.py  guardrails.py  language.py  logger.py  security.py
ai-agent/eval/: dataset.py  judge.py  run_evals.py
ai-agent/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py  vision_extractor.py
ai-agent/rag/: qdrant_client.py  query_chain.py  retriever.py  writer.py
ai-agent/tests/: conftest.py  test_api_ingest.py  test_api_query.py  test_chunker.py  test_embedder.py  test_ingestion_pipeline.py  test_lab_extractor.py  test_parser.py  test_query_chain.py  test_supervisor.py
ai-agent/tools/: document_classifier.py  lab_extractor.py  supplement_extractor.py  symptom_extractor.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: deps.py
backend/core/: config.py  security.py
backend/db/: base.py  qdrant_client.py  session.py
backend/models/: __init__.py  conversation.py  document.py  lab_result.py  supplement.py  symptom.py  timeline.py  usage_event.py  user.py
backend/repositories/: conversation_repository.py  document_repository.py  ingestion_cleanup_repository.py  lab_result_repository.py  supplement_repository.py  symptom_repository.py  timeline_repository.py  usage_event_repository.py  user_repository.py
backend/schemas/: admin.py  auth.py  conversation.py  document.py  lab_result.py  supplement.py  symptom.py  timeline.py
backend/services/: document_service.py  (+3 more)
(+137 files in other folders)
