[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "openai>=2.38.0",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.18.0",
    "sqlmodel>=0.0.38",
    "sentry-sdk[fastapi]>=2.0.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
