[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.30",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.48.0",
]
