[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "bcrypt>=4.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.30",
    "sqlalchemy[asyncio]>=2.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
]
